--- a/css/style.css
+++ b/css/style.css
@@ -593,9 +593,10 @@ div p {
 
 /* Large device 1025 to 1200 px */
 @media (max-width: 1200px) {
-    div p{
+    div p,.comparison-table td{
         font-size: 1.5rem!important;
     }
+    
 }
 
 /* Medium device 769 to 1024px */
@@ -624,4 +625,18 @@ div p {
         text-align: center;
     }
 }
-    
+
+
+/* Small device 481 to 768px */
+@media (max-width: 768px) {
+    .bts-container{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .bts-category{
+        width: 80%;
+        margin-top: 5rem!important;
+    }
+
+}
