--- a/css/style.css
+++ b/css/style.css
@@ -675,7 +675,9 @@ div p {
     }
 
     .profil-img img{
-        width: 50vw;
+        width: 100%; 
+        height: auto; 
+        max-width: 100%; 
     }
     
     .heading,.projets-box h3{
